--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="action">
-        <div class="profile">
+        <div class="profile" onclick="ToggleMenu()">
             <img src="/image/mountain_forest_3-wallpaper-2560x1440.jpg" alt="">
         </div>
         <div class="menu">
